# discord-bot-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
discord_bot_with_docker/: main.py
docker/: Dockerfile  docker-compose.yml
